--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     padding: 0;
     /* For Bootstrap, we need to make outline = 0, because by default it gets some outline */
     outline: 0;
+    /* To avoid, overflow issue*/    
+    box-sizing: border-box;
 }
 
 /* For Bootstrap a:hover gets text-decoration, by default, so we need to make it "none" */
